--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <div class="prop">
-        <h1>Santiago - Chile</h1>
-        <marquee>Faça sua viagem para Santiago!</marquee>
+        <h1>Projeto AZ-900</h1>
+        <marquee>O ROCK É A SUA MELHOR VIAGEM</marquee>
     </div>
 
     <div class="slider">
@@ -29,19 +29,19 @@
             <input type="radio" nome="radio-btn" id="radio4">
 
             <div class="slide first">
-                <img src="./src/imgs/castelo.png" alt="Imagem-1">
+                <img src="./src/imgs/DRI - Front Cover.jpg" alt="Imagem-1">
             </div>
 
             <div class="slide">
-                <img src="./src/imgs/cidade.png" alt="Imagem-2">
+                <img src="./src/imgs/judas-priest-17.jpg" alt="Imagem-2">
               </div>
 
             <div class="slide">
-                <img src="./src/imgs/codilheira.png" alt="Imagem-3">
+                <img src="./src/imgs/KISS-Destroyer-album-cover-820-1000x600.jpg" alt="Imagem-3">
             </div>
 
             <div class="slide">
-                <img src="./src/imgs/neve.png" alt="Imagem-4">
+                <img src="./src/imgs/CAPA-black-sabbath.png" alt="Imagem-4">
             </div>
 
             <diV class="navigation-auto">
@@ -66,7 +66,7 @@
     <script src="js/script.js"></script>
 
     <footer>
-        ❣️🚀❣️ Vitor de Jesus ❣️🚀❣️
+         🚀 &copy;Lucas Felix 🚀
     </footer>
 
 </body>
